# 42-ready_set_boole

./: Cargo.toml
src/: lib.rs
src/ex00/: adder.rs  main.rs  test.rs
src/ex01/: main.rs  multiplier.rs  test.rs
src/ex02/: main.rs  test.rs
src/ex03/: boolean_evaluation.rs  main.rs  test.rs
src/ex04/: main.rs  test.rs  truth_table.rs
