[package]
name = "ready_set_boole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false

[dependencies]

[lib]
name = "ready_set_boole"
path = "src/lib.rs"

[[bin]]
name = "ex00"
path = "src/ex00/main.rs"

[[bin]]
name = "ex01"
path = "src/ex01/main.rs"

[[bin]]
name = "ex02"
path = "src/ex02/main.rs"

[[bin]]
name = "ex03"
path = "src/ex03/main.rs"

[[bin]]
name = "ex04"
path = "src/ex04/main.rs"
